Update to JDK25. (#111)
* Update to JDK25.
* Update gradle build
* Document in README
* Adjust GitHub actions
* Update any dependencies other than JGraphT
* Update baseline file due to new spotbugs
* Fix a bug in AdaptiveConf found by new spotbugs
* Update scaTTM3F to latest version w/ JDK22 and recent Scala
* SInce foreign is now official part of JDK25, adjust MPIInterface
* Adjust doc for MPI helper.
* Adjust data layout to match updated scaTTM3F layout.
* Recreate spotbugs baseline
* Force MPI init and finalize to only be called once.
* Mark Wtime as short-lived (critical)
* Upgrade actions
* Update LaTeX action
* gradle action change
* Update copyright